tests/idris2/total011/expected
1/1: Building Issue1782 (Issue1782.idr)
Error: hack is not total, possibly not terminating due to recursive path Main.hack -> Main.hack

Issue1782:8:1--9:27
 8 | total
 9 | hack : Nat -> (Void, Void)

1/1: Building Issue1460 (Issue1460.idr)
Error: nonproductive is not total, possibly not terminating due to recursive path Main.nonproductive -> Main.nonproductive -> Main.nonproductive

Issue1460:3:1--3:43
 1 | %default total
 2 | 
 3 | nonproductive : Stream a -> (Stream a, ())
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

1/1: Building Issue1859 (Issue1859.idr)
Error: fix is not total, possibly not terminating due to recursive path Main.fix -> Main.fix

Issue1859:3:1--3:11
 1 | %default total
 2 | 
 3 | fix : Void
     ^^^^^^^^^^

1/1: Building Issue1859-2 (Issue1859-2.idr)
Error: iamvoid is not total, possibly not terminating due to recursive path Main.iamvoid -> Main.tailRecId -> Main.tailRecId

Issue1859-2:8:1--8:15
 4 | tailRecId f a = case f a of
 5 |   Left a2 => tailRecId f a2
 6 |   Right b => b
 7 | 
 8 | iamvoid : Void
     ^^^^^^^^^^^^^^

Error: tailRecId is not total, possibly not terminating due to recursive path Main.iamvoid -> Main.tailRecId -> Main.tailRecId

Issue1859-2:3:1--3:40
 1 | %default total
 2 | 
 3 | tailRecId : (a -> Either a b) -> a -> b
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

